--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <ul>
-      <li><a href="home.html">Início</a></li>
+      <li><a href="#">Início</a></li>
       <li><a href="#">Alunos</a></li>
       <li><a href="#">Projetos</a></li>
       <li><a href="#">Contato</a></li>
@@ -42,9 +42,9 @@
 
    <nav>
     <ul>
-      <li><a href="" class="rds">instragram</a></li>
-      <li><a href="" class="rds">tiktok</a></li>
-      <li><a href="" class="rds">IFS</a></li>
+      <li><a href="https://www.instagram.com/inforifs_1ano25k/" class="rds">instragram</a></li>
+      <li><a href="https://www.tiktok.com/@1ano_inforifs?_t=ZM-8vb6yAKfgaV&_r=1" class="rds">tiktok</a></li>
+      <li><a href="https://www.instagram.com/ifs_cpropria/" class="rds">IFS</a></li>
     </ul>
    </nav>
   </footer>
