coloquei a imagen da sala

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="galeria">
       <h2>Galeria</h2>
-      <img src="galera.jpeg" alt="Foto da sala" class="foto-sala">
+      <img src="imagens/foto_sala.jpeg" alt="Foto da sala" class="foto-sala">
     </section>
 
     <section class="projetos">
