--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Sala IFS 2025</title>
-  <link class="icone" rel="shortcut icon" href="imagens/logoifs.png" type="image/png">
-  <link rel="stylesheet" href="estilos/inicio.css">
+  <link class="icone" rel="shortcut icon" href="conteudos/imagens/logoifs.png" type="image/png">
+  <link rel="stylesheet" href="conteudos/estilos/inicio.css">
 </head>
 <body>
   <header>
-    <h1>Bem-vindo à Sala IFS 2025</h1>
+    <h1>Bem-vindo</h1>
     <p>Instituto Federal SE - Curso Técnico em Informática</p>
   </header>
 
   <nav>
     <ul>
-      <li><a href="#">Início</a></li>
+      <li><a href="conteudos/inicio.html">Início</a></li>
       <li><a href="#">Alunos</a></li>
       <li><a href="#">Projetos</a></li>
       <li><a href="#">Contato</a></li>
@@ -29,7 +29,7 @@
 
     <section class="galeria">
       <h2>Galeria</h2>
-      <img src="imagens/foto_sala.jpeg" alt="Foto da sala" class="foto-sala">
+      <img src="conteudos/imagens/foto_sala.jpeg" alt="Foto da sala" class="foto-sala">
     </section>
 
     <section class="projetos">
