--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <nav>
     <ul>
       <li><a href="conteudos/inicio.html">Início</a></li>
-      <li><a href="#">Alunos</a></li>
-      <li><a href="#">Projetos</a></li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="conteudos/inicio.html">Alunos</a></li>
+      <li><a href="conteudos/inicio.html">Projetos</a></li>
+      <li><a href="conteudos/inicio.html">Contato</a></li>
     </ul>
   </nav>
 
