--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Sala IFS 2025</title>
   <link class="icone" rel="shortcut icon" href="conteudos/imagens/logoifs.png" type="image/png">
   <link rel="stylesheet" href="conteudos/estilos/inicio.css">
+  
 </head>
 <body>
   <header>
@@ -29,7 +30,7 @@
 
     <section class="galeria">
       <h2>Galeria</h2>
-      <img src="conteudos/imagens/foto_sala.jpeg" alt="Foto da sala" class="foto-sala">
+      <img onclick="grow()" src="conteudos/imagens/foto_sala.jpeg" alt="Foto da sala" id="foto-sala">
     </section>
 
     <section class="projetos">
@@ -48,5 +49,6 @@
     </ul>
    </nav>
   </footer>
+  <script src="conteudos/scripts/funçoes.js"></script>
 </body>
 </html>
