--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="conteudos/inicio.html">Início</a></li>
       <li><a href="conteudos/inicio.html">Alunos</a></li>
       <li><a href="conteudos/inicio.html">Projetos</a></li>
-      <li><a href="conteudos/inicio.html">Contato</a></li>
+      <li><a href="https://youtu.be/S06IYs3csWI?si=16m7nNZxYO0r09UN">Contato</a></li>
     </ul>
   </nav>
 
