--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
   <nav>
     <ul>
-      <li><a href="conteudos/inicio.html">Início</a></li>
-      <li><a href="conteudos/inicio.html">Alunos</a></li>
+      <li><a href="conteudos/sobre a turma.html">Sobre a turma</li>
       <li><a href="conteudos/inicio.html">Projetos</a></li>
-      <li><a href="https://youtu.be/S06IYs3csWI?si=16m7nNZxYO0r09UN">Contato</a></li>
+      <li><a href="https://youtu.be/S06IYs3csWI?si=16m7nNZxYO0r09UN">galeria</a></li>
     </ul>
   </nav>
 
@@ -29,7 +28,7 @@
     </section>
 
     <section class="galeria">
-      <h2>Galeria</h2>
+      <h2>alunos primeirão</h2>
       <img onclick="grow()" src="conteudos/imagens/foto_sala.jpeg" alt="Foto da sala" id="foto-sala">
     </section>
 
@@ -48,6 +47,7 @@
       <li><a href="https://www.instagram.com/ifs_cpropria/" class="rds">IFS</a></li>
     </ul>
    </nav>
+   <p id="autu">Atualizações do site todos os dias</p>
   </footer>
   <script src="conteudos/scripts/funçoes.js"></script>
 </body>
