--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
       <li><a href="conteudos/sobre a turma.html">Sobre a turma</li>
       <li><a href="conteudos/inicio.html">Projetos</a></li>
-      <li><a href="https://youtu.be/S06IYs3csWI?si=16m7nNZxYO0r09UN">galeria</a></li>
+      <li><a href="conteudos/inicio.html">galeria</a></li>
     </ul>
   </nav>
 
