--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="conteudos/sobre a turma.html">Sobre a turma</li>
-      <li><a href="conteudos/inicio.html">Projetos</a></li>
+      <li><a href="conteudos/projetos.html">Projetos</a></li>
       <li><a href="conteudos/inicio.html">galeria</a></li>
     </ul>
   </nav>
