--- a/conteudos/projetos.html
+++ b/conteudos/projetos.html
@@ -12,11 +12,11 @@
         <h2>Olimpiada Brasileira de Ciencias(ONC)</h2>
     </section>
     <div id="topico">
-        <button onclick="numeração(1)">fisica</button>
+        <button onclick="numeração(1)">Fisica</button>
         <div id="conteudo1">
             <nav>
                 <ul>
-                    <li><a href="#">Mecânica</a></li>
+                    <li><a href="pdf's/Mecânica.pdf" download="Mecânica">Mecânica</a></li>
                     <li><a href="#">Óptica</a></li>
                     <li><a href="#">Ondulatória</a></li>
                     <li><a href="#">Eletricidade</a></li>
